--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/cab62e4741.js" crossorigin="anonymous"></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Influencer Gears</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -159,7 +160,16 @@
     </main>
 
     <footer>
-
+        <div class="footer-content">
+            <h1 class="footer-title">Inffluencer products</h1>
+            <p class="footer-description">Copyright &copy; 2025 influencer products <br> All rights reserved</p>
+            <div class="icons">
+                <i class='bx bxl-instagram' ></i>
+                <i class='bx bxl-dribbble'></i>
+                <i class='bx bxl-twitter' ></i>
+                <i class='bx bxl-youtube' ></i>
+            </div>
+        </div>
     </footer>
 
 </body>
